--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,55 @@
-Django>=2.2.4
-whitenoise
+astroid==2.3.3
+atomicwrites==1.3.0
+attrs==19.3.0
+beautifulsoup4==4.8.1
+boto==2.49.0
+boto3==1.10.17
+botocore==1.13.17
+bs4==0.0.1
+certifi==2019.9.11
+chardet==3.0.4
+colorama==0.4.1
+dj-database-url==0.5.0
+docutils==0.15.2
+funcy==1.13
+future==0.18.2
+gensim==3.8.1
+gunicorn==20.0.0
+idna==2.8
+importlib-metadata==0.23
+isort==4.3.21
+Jinja2==2.10.3
+jmespath==0.9.4
+joblib==0.14.0
+JPype1==0.6.3
+konlpy==0.5.1
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+more-itertools==7.2.0
+nltk==3.4.5
+numexpr==2.7.0
+numpy==1.17.4
+packaging==19.2
+pandas==0.25.3
+pluggy==0.13.0
+psycopg2-binary==2.8.4
+py==1.8.0
+pyLDAvis==2.1.2
+pylint==2.4.4
+pyparsing==2.4.5
+pytest==5.2.2
+python-dateutil==2.8.0
+pytz==2019.3
+requests==2.22.0
+s3transfer==0.2.1
+scipy==1.3.2
+six==1.13.0
+smart-open==1.9.0
+soupsieve==1.9.5
+typed-ast==1.4.0
+urllib3==1.25.7
+wcwidth==0.1.7
+whitenoise==4.1.4
+wrapt==1.11.2
+zipp==0.6.0
